--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "svelte-check": "^2.0.0",
     "svelte-preprocess": "^4.9.0",
     "tslib": "^2.0.0",
-    "typescript": "^4.4.0"
+    "typescript": "^4.4.0",
+    "vercel": "^23.1.2"
   },
   "type": "module",
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
     "bootstrap": "^5.0.0-beta3",
-    "cookie": "^0.4.1"
+    "cookie": "^0.4.1",
+    "svelte-i18n": "^3.3.13"
   }
 }
