--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@lukeed/uuid": "^2.0.0",
     "bootstrap": "^5.0.0-beta3",
     "cookie": "^0.4.1",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "svelte-i18n": "^3.3.13"
   }
 }
