--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@fontsource/fira-mono": "^4.2.2",
     "@lukeed/uuid": "^2.0.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.0.0-beta3",
     "cookie": "^0.4.1",
     "graphql": "^16.3.0",
