--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cookie": "^0.4.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.0.0",
+    "svelte-emoji": "^1.0.2",
     "svelte-i18n": "^3.3.13"
   }
 }
